--- a/philosophy/overall/index.html
+++ b/philosophy/overall/index.html
@@ -349,7 +349,7 @@
 <ul class="widget-list">
     
     <li>
-        <a href="https://zhoutengye.github.io/post/2021-01-24/" title="随想">随想</a>
+        <a href="https://zhoutengye.github.io/post/2021-01-24/" title="我用这个做组会的年终总结，大概会被打吧">我用这个做组会的年终总结，大概会被打吧</a>
     </li>
     
     <li>
